Fix button labels in duels dropdown not visible on hover
Fix a bug where when you hover over the control buttons in duels hero selection dropdown, labels become not visible because of the same background and font color.

--- a/core/src/css/component/filter-dropdown-multiselect.component.scss
+++ b/core/src/css/component/filter-dropdown-multiselect.component.scss
@@ -130,7 +130,6 @@
 
 				&:hover:not(.disabled) {
 					background: var(--color-1);
-					color: var(--on-confirmation-text-color);
 				}
 			}
 
